version '1.0'

apply plugin: 'java'

sourceCompatibility = 1.8

compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    compile project(':Core')
    testCompile group: 'junit', name: 'junit', version: '4.11'
}
